syntax = "proto3";

package UnityAPI.Pub;

enum ScenarioState
{
	Init = 0;
	Stopped = 1;
	Playing = 2;
	Pasued = 3;
}

message StatusMessage
{
	repeated EntityData entities = 1;
	ScenarioState state = 2;
	int64 timestamp = 3;
	string scenarioPath = 4;
}


message EntityData
{
	int32 Id=4;
	VectorDouble location = 1;
	VectorDouble orientation = 2;
	string Name = 3;
}

message VectorDouble
{
	double x = 1;
	double y = 2;
	double z = 3;
}